--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ h2.prod-name {
 
 p.prod-info {
     color: hsl(228, 12%, 48%);
-    line-height: 1.5em;
+    line-height: 1.6em;
+    font-size: 16px;
 
 }
 
